# observatorio-legislativo-ODS

./: .gitignore  CLAUDE.md  GUION_HUELLA_v7.md  NOTICE.md  README.md  docker-compose.yml
_entrada/: INSTRUCCIONES_CODE_v3_minutas_y_narrativa.md  dashboard_huella2030.html  iniciativas_ejecutivo_ods.csv  matches_minutas_ejecutivo.json  minutas_lxvi_1.csv
api/: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  README.md  logging.conf  pyproject.toml
api/tests/: conftest.py  helpers.py
api/tests/fixtures/: knowledgebase.json
api/tests/integration/: conftest.py  test_live_data.py  test_tagger_sentinels.py
api/tests/unit/: conftest.py  test_content_es.py  test_huella_aggregate.py  test_minutas_aggregate.py  test_normtrace_api.py  test_ratelimit.py  test_tagger.py
api/tipi_backend/: app.py  manage_alerts_by_email.py  settings.py  wsgi.py
api/tipi_backend/api/: business.py  cache.py  huella.py  minutas.py  normtrace.py  parsers.py  ratelimit.py  request_models.py  serialization.py  validators.py
api/tipi_backend/api/endpoints/: alerts.py  deputies.py  footprint.py  huella.py  initiative_status.py  initiative_types.py  initiatives.py  minutas.py  normtrace.py  parliamentarygroups.py  places.py  scanned.py  stats.py  tagger.py  topics.py  voting.py
api/tipi_backend/api/managers/mexico/: initiative_status.py  initiative_type.py
docs/: ARCHITECTURE.md  DEPLOY_RAILWAY.md  PLAN.md  TROPICALIZACION.md
engine/: Dockerfile  pyproject.toml
frontend/: .env  .env.mx  .env.production  Dockerfile-mx  index.html  nginx-default.conf  nginx.conf.template  package-lock.json  package.json
knowledgebase/: gen_rsi_seed.py  load_all.py  load_executive.py  load_kb.py  load_minutas.py  validate_seeds.py
normtrace/: CITATION.cff  (+2 more)
(+172 files in other folders)
