[project]
name = "qhld-backend"
version = "2.0.1"
description = "QHLD Backend"
authors = [{ name = "pr3ssh" }]
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "slowapi==0.1.10",
    # redis-py is capped at <6.5 by qhld-tasks' celery 5.6.3 / kombu[redis]
    "redis==6.4.0",
    "python-multipart==0.0.32",
    "jinja2==3.1.6",
    "natsort==8.4.0",
    "pdfminer.six==20260107",
    # OCR de respaldo para PDFs escaneados (imagen sin capa de texto). Los binarios
    # tesseract/poppler van en el Dockerfile del api.
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "qhld-data",
    "qhld-tasks",
    "legal-segmenter",
]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "httpx2==2.4.0",
    "locust==2.44.3",
]

[tool.uv.sources]
qhld-data       = { path = "../packages/qhld-data", editable = true }
qhld-tasks      = { path = "../packages/qhld-tasks", editable = true }
legal-segmenter = { path = "../packages/legal-segmenter", editable = true }

[tool.pytest.ini_options]
# Listed unit-first so the fast no-infra tests run before the live-DB ones.
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: no-infra tests; run anywhere with no Mongo/Redis/broker. Filter with `-m unit`.",
    "integration: read-only checks against a live prod-copy Mongo; auto-skip when none is reachable. Filter with `-m integration`.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipi_backend"]
